add in helper method array_merge_recursive_distinct

--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,9 @@
         "classmap": [
             "src/migrations"
         ],
+        "files": [
+            "src/Fancy/Core/Support/helpers.php"
+        ],
         "psr-0": {
             "Fancy\\Core": "src/"
         }
