update package name

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,5 @@
 {
-    "name": "fancy/core",
-    "description": "",
+    "name": "kenvunz/laravel-theme-core",
     "authors": [
         {
             "name": "Ken",
